fixed submenu alignment, styled contact page

--- a/sass/components/content/_page-contact.scss
+++ b/sass/components/content/_page-contact.scss
@@ -7,15 +7,25 @@
 
 .page-id-125 h2 {
     text-align: center;
+    padding: 50px;
+    font-size: 1.25rem;
 }
 
-.page-id-125 a {
+.page-id-125 .site-main a {
+    background-color: $color__main_accent;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
     display: block;
+    color: $color__bg_offwhite;
+    padding: 10px;
     text-align: center;
     text-decoration: none;
     transition: .2s ease-in-out;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     &:hover {
-        color: $color__main_accent;
+        background-color: $color__bg_offwhite;
+        color: $color__text_main;
     }
 }
 
@@ -52,6 +62,13 @@
 
 .page-id-125 input, .page-id-125 textarea {
     width: 100%;
+    border: 1px solid rgba(211, 211, 211, 0.475);
+    transition: .2s ease-in-out;
+    &:focus-within {
+        box-shadow: 0px 0.2em 2.5em #c4c4c4;
+        transform: scale(1.025);
+        outline-style: none;
+    }
 }
 
 // @media (min-width: $mq__tablet) {
@@ -61,18 +78,31 @@
 // }
 
 .contact-form-container {
-    padding-top: 50px;
+    background-color: #f1f2e9d6;
+    padding-top: 25px;
     padding-bottom: 100px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 25px;
+    margin-bottom: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
     padding-left: 10px;
     padding-right: 10px;
+    transition: .2s ease-in-out;
+    &:focus-within {
+        box-shadow: 0px 0.2em 2.5em #c4c4c4;
+        transform: scale(1.025);
+    }
 }
 
 @media (min-width: $mq__tablet) {
     .contact-form-container {
+        margin-left: auto;
+        margin-right: auto;
         padding-left: 100px;
         padding-right: 100px;
+        background-color: #f1f2e984;
+        max-width: 1000px;
+        margin-top: 50px;
     }
 }
 
@@ -86,7 +116,6 @@
 
 // form submit button
 .wpcf7-form-control.has-spinner.wpcf7-submit {
-    width: 100%;
     border: none;
     padding: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
@@ -102,5 +131,7 @@
 @media (min-width: $mq__tablet) {
     .wpcf7-form-control.has-spinner.wpcf7-submit {
         padding: 15px;
+        max-width: 200px;
+        float: right;
     }
 }
